--- a/screenRelayer/screenRelayer.vcxproj
+++ b/screenRelayer/screenRelayer.vcxproj
@@ -91,6 +91,16 @@
     <ClCompile Include="screenRelayer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="screenRelayer.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icons\logo.ico" />
+    <Image Include="icons\logo.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
