--- a/screenRelayer/screenRelayer.vcxproj.filters
+++ b/screenRelayer/screenRelayer.vcxproj.filters
@@ -41,4 +41,22 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="screenRelayer.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icons\logo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="icons\logo.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
